Change registry key const to load browser helper objects from another location instead of using IE's list. Also fix some naming convention. b=171063 r=chak@netscape.com sr=blizzard@mozilla.org